<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv_logo2"
        android:src="@drawable/account"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tvLoginAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="Login"
        android:minHeight="48dp" />

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="190dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etLoginEmailID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_emailID"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/label_login_btn" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/hint_or"
        android:textAlignment="center"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btnCreateNewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/label_create_new_account_btn" />

</LinearLayout>