<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:padding="20dp"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/iv_logo3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:src="@drawable/account"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tvCreateNewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="Create New Account"
        android:minHeight="48dp" />

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="320dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:hint="@string/hint_emailID"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/hint_username"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/label_create_account_btn" />

    </LinearLayout>

    </ScrollView>

</LinearLayout>