<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:fitsSystemWindows="true"
    tools:context=".PreferencesActivity">

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end">

        <ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autoStart="true"
            android:flipInterval="1000">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/google"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/jiohotsarlogo"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/instagram_logo"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/amazon_logo"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/mponlinelimitedlogo"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rgpvlogo"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/chatgpt_logo_svg"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cbselogo"/>

        </ViewFlipper>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:hint="@string/hint_welcome" />

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Log Out"
            android:textStyle="bold"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_margin="10dp"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Select Category"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:padding="10dp"/>

                <Button
                    android:id="@+id/btnGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_google"/>

                <Button
                    android:id="@+id/btnGovernmentPortals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_government_portals"/>

                <Button
                    android:id="@+id/btnRGPV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_rgpv"/>

                <Button
                    android:id="@+id/btnSchoolEducationPortals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_education_portals"/>

                <Button
                    android:id="@+id/btn_shopping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_shopping"/>

                <Button
                    android:id="@+id/btn_ai"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ai"/>

                <Button
                    android:id="@+id/btn_social_media"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_social_media"/>

                <Button
                    android:id="@+id/btn_ott"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ott"/>

            </LinearLayout>

            <TextView
                android:background="@drawable/shape"
                android:textColor="#ff0000"
                android:id="@+id/tvExploreFurtherClickHere"
                android:layout_width="match_parent"
                android:text="Explore further click here !"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_height="50dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>